# pucoti

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dtimer.py  event_key_utils.py  os_specific_window_manager.py  pucoti.py  pyproject.toml
src/: app.py  base_config.py  callback.py  config.py  constants.py  platforms.py  purpose.py  pygame_utils.py  server.py  utils.py
src/screens/: base_screen.py  main_screen.py  social_screen.py
tests/: test_config.py
